[package]
name = "beam"
version = "0.1.0"
authors = ["Enrique <niofis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.42"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["gfx"]